<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nancy1">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="60dp"
        android:text="@string/fibonacci1"
        android:textSize="25dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="25dp"
        android:text="@string/fibonacci2"
        android:textSize="25dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="25dp"
        android:text="@string/fibonacci3"
        android:textSize="25dp"
        android:textColor="@color/white"/>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_marginLeft="61dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="25dp"
        android:text="@string/fibonacci4"
        android:textSize="25dp"
        android:textColor="@color/white"/>

</RelativeLayout>
