<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nancy1">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:text="@string/perfectnumber1"
        android:textSize="25dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:text="@string/perfectnumber2"
        android:textSize="25dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:text="@string/perfectnumber3"
        android:textSize="25dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="20dp"
        android:text="@string/perfectnumber4"
        android:textSize="25dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/white"/>


</RelativeLayout>
