<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nancy1">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/modulararithmetic1"
        android:textColorLink="@color/white"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:onClick="click"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="22dp"
        android:text="@string/modulararithmetic2"
        android:textColorLink="@color/white"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:onClick="click"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/modulararithmetic3"
        android:textSize="25dp"
        android:textColorLink="@color/white"
        android:textColor="@color/white"
        android:onClick="click"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:text="@string/modulararithmetic4"
        android:textSize="25dp"
        android:textColorLink="@color/white"
        android:textColor="@color/white"
        android:onClick="click"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="20dp"
        android:text="@string/modulararithmetic5"
        android:textSize="25dp"
        android:textColorLink="@color/white"
        android:textColor="@color/white"
        android:onClick="click"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="20dp"
        android:text="@string/modulararithmetic6"
        android:textSize="25dp"
        android:textColorLink="@color/white"
        android:textColor="@color/white"
        android:onClick="click"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/modulararithmetic7"
        android:textSize="25dp"
        android:textColorLink="@color/white"
        android:textColor="@color/white"
        android:onClick="click"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@null"
        android:onClick="showProgramming"
        android:text="Back"
        android:textColor="@color/white"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:onClick="exitApp"
        android:text="Exit"
        android:textColor="@color/white"
        android:textSize="20dp"/>


</RelativeLayout>
