<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nancy1">

    <TextView
        android:id="@+id/binaryindextree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginTop="60dp"
        android:text="@string/insertion1"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/binaryindextree"
        android:layout_alignStart="@+id/binaryindextree"
        android:layout_below="@+id/binaryindextree"
        android:layout_marginTop="25dp"
        android:text="@string/insertion2"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView8"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="25dp"
        android:text="@string/insertion3"
        android:textColor="@color/white"
        android:textSize="23sp" />

</RelativeLayout>
