<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nancy1">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="102dp"
        android:text="@string/eulertotientfunction1"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:onClick="click"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="35dp"
        android:text="@string/eulertotientfunction2"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:onClick="click"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="29dp"
        android:text="@string/eulertotientfunction3"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:onClick="click"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/eulertotientfunction4"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:onClick="click"/>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@null"
        android:onClick="showProgramming"
        android:text="Back"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:onClick="exitApp"
        android:text="Exit"
        android:textColor="@color/white"/>

</RelativeLayout>
